packages/fuels-macros/tests/ui/derive/parameterize/attribute_must_be_named_value.stderr
error: expected name='value'
 --> tests/ui/derive/parameterize/attribute_must_be_named_value.rs:4:3
  |
4 | #[FuelsTypesPath]
  |   ^^^^^^^^^^^^^^

error: expected string literal
  --> tests/ui/derive/parameterize/attribute_must_be_named_value.rs:10:20
   |
10 | #[FuelsTypesPath = true]
   |                    ^^^^
