packages/fuels-macros/tests/ui/derive/parameterize/attribute_must_be_named_value.rs
use fuels_macros::Parameterize;

#[derive(Parameterize)]
#[FuelsTypesPath]
enum SomeEnum {
    A(u8),
}

#[derive(Parameterize)]
#[FuelsTypesPath = true]
struct SomeStruct {}

fn main() {}
